--- a/hine_shopping/pubspec.yaml
+++ b/hine_shopping/pubspec.yaml
@@ -56,9 +56,9 @@ dev_dependencies:
   sqflite: ^2.0.3+1
   provider: 
   http: ^0.13.5
-  # shared_preferences: ^2.0.15
-  # path_provider: ^2.0.10
-  # badges: ^2.0.2
+  shared_preferences: ^2.0.15
+  path_provider: ^2.0.10
+  badges: ^2.0.2
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
